<resources>
    <string name="app_name">Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>


    <string name="_multiply">*</string>
    <string name="_minus">-</string>
    <string name="_plus">+</string>
    <string name="_point">.</string>
    <string name="_divide">/</string>
    <string name="addition">addition</string>
    <string name="_addition">addition</string>
    <string name="_equally">=</string>
    <string name="_theme_1">Theme 1</string>
    <string name="_theme_2">Theme 2</string>
    <string name="_theme_3">Theme 3</string>
    <string name="set_theme">Set Theme</string>
</resources>