<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_potato"

    tools:context="ui.MainActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="@dimen/textViewWidth"
        android:layout_height="@dimen/textViewHeight"
        android:textColor="@color/white"
        android:textSize="@dimen/textViewTextSize"
        app:layout_constraintBottom_toTopOf="@+id/button_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        app:layout_constraintBottom_toBottomOf="@id/button_2"
        app:layout_constraintEnd_toStartOf="@id/button_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_3"
        app:layout_constraintStart_toEndOf="@id/button_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        app:layout_constraintBottom_toBottomOf="@id/button_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_2"
        app:layout_constraintTop_toTopOf="@id/button_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        app:layout_constraintBottom_toBottomOf="@id/button_5"
        app:layout_constraintEnd_toStartOf="@id/button_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        app:layout_constraintEnd_toStartOf="@id/button_6"
        app:layout_constraintStart_toEndOf="@id/button_4"
        app:layout_constraintTop_toBottomOf="@id/button_2"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        app:layout_constraintBottom_toBottomOf="@+id/button_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_5"
        app:layout_constraintTop_toTopOf="@+id/button_5"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        app:layout_constraintBottom_toBottomOf="@+id/button_8"
        app:layout_constraintEnd_toStartOf="@id/button_8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_5"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        app:layout_constraintEnd_toStartOf="@id/button_9"
        app:layout_constraintStart_toEndOf="@id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        app:layout_constraintBottom_toBottomOf="@+id/button_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_8"
        app:layout_constraintTop_toTopOf="@+id/button_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintEnd_toStartOf="@id/button_plus"
        app:layout_constraintStart_toEndOf="@id/button_point"
        app:layout_constraintTop_toBottomOf="@+id/button_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_point"
        app:layout_constraintBottom_toBottomOf="@+id/button_0"
        app:layout_constraintEnd_toStartOf="@id/button_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_plus"
        app:layout_constraintBottom_toBottomOf="@+id/button_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_0"
        app:layout_constraintTop_toTopOf="@+id/button_0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_minus"
        app:layout_constraintBottom_toBottomOf="@+id/button_multiply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_multiply"
        app:layout_constraintTop_toTopOf="@+id/button_multiply" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_multiply"
        app:layout_constraintEnd_toStartOf="@+id/button_divide"
        app:layout_constraintStart_toEndOf="@+id/button_minus"
        app:layout_constraintTop_toBottomOf="@+id/button_0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_divide"
        app:layout_constraintStart_toEndOf="@id/button_multiply"
        app:layout_constraintBottom_toBottomOf="@+id/button_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_equally"
        android:layout_width="@dimen/_buttonEquallyWidth"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/button_minus"
        app:layout_constraintEnd_toEndOf="@id/button_divide"
        android:text="@string/_equally"
        />

</androidx.constraintlayout.widget.ConstraintLayout>