<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityTheme">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/theme_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_theme_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/theme_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/theme_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_theme_2"
        app:layout_constraintTop_toBottomOf="@id/theme_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/theme_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/theme_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_theme_3"
        app:layout_constraintTop_toBottomOf="@id/theme_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>